# vectrix

./: CMakeLists.txt  main  main.cpp
vectrix/: vec2.cpp  vec4.cpp  vec4.h  vectrix.cpp  vectrix.h  vex3.cpp  vex3.h
vectrix/matrix/: MatrixPartition.cpp  MatrixPartition.h  mat2x2.cpp  mat2x2.h  mat2x3.cpp  mat2x3.h  mat2x4.cpp  mat2x4.h  mat3x2.cpp  mat3x2.h
vectrix/vector/: vec2.cpp  vec2.h  vec4.cpp  vex3.cpp  vex3.h
